# loopwise

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  loopwise-design-doc.md  pyproject.toml
.claude/: settings.local.json
loopwise/: __init__.py  cli.py  config.py  db.py  models.py
loopwise/adapters/: __init__.py  base.py  langsmith.py
loopwise/analysis/: __init__.py  clustering.py  heuristics.py
loopwise/suggestions/: __init__.py  generator.py
tests/: __init__.py  test_adapters.py  test_heuristics.py  test_models.py
